# FUTURUS_V3

./: .gitignore  COMPARACAO_FUTURUS_VS_KALSHI.md  COMPARISON_FUTURUS_VS_KALSHI.md  FUTURUS.md  KALSHI.md  README.md
.claude/: settings.json
AI/: docker-backup.md
AI/AI-DOC/: .config.key  MCP-Claude.txt  (+3 more)
BLOCKCHAIN/futurus-solana/prediction-futurus-coin/programs/futurus_coin/: Cargo.toml
BLOCKCHAIN/futurus-solana/prediction-futurus-coin/programs/futurus_coin/src/: lib.rs
BLOCKCHAIN/futurus-solana/prediction-market-smartcontract/: Cargo.toml  README.md  fut_mint.json  package.json  tsconfig.json
BLOCKCHAIN/futurus-solana/prediction-market-smartcontract/programs/prediction/src/: constants.rs  events.rs  lib.rs
BLOCKCHAIN/futurus-solana/prediction-market-smartcontract/programs/prediction/src/instructions/: claim_winnings.rs  close_market.rs
BLOCKCHAIN/futurus-solana/prediction-market-smartcontract/programs/prediction/src/states/: mod.rs
BLOCKCHAIN/futurus-solana/prediction-market-smartcontract/scripts/: init_fut.ts
BLOCKCHAIN/futurus-solana/prediction-market-smartcontract/tests/: const.ts
DOC/: GIT.md  INSTALL.md  TODO.md  commands.md  politica   prompt.md
Futurus-LARAVEL/: .dockerignore  .env.example  .gitignore  .htaccess  Dockerfile  Dockerfile.prod  README.md  backup.sh  deploy_to_server.sh  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.yml  restore.sh  setup-dev.sh  setup-local.sh  setup-prod.sh  setup-proxy.sh  upload-server-laravel.sh
Futurus-NEXTJS/: .config.key  .env.example  .gitignore  FUNCTIONALITIES.md  backup.sh  docker-compose.yml  restore.sh  server-upload.sh  server_upload.sh  setup-futurus.sh  super_upload_script.sh
Futurus-NEXTJS/blockchain/prediction-market-smartcontract/programs/prediction/: Cargo.toml
Futurus-NEXTJS/blockchain/prediction-market-smartcontract/programs/prediction/src/: errors.rs  utils.rs
Futurus-NEXTJS/blockchain/prediction-market-smartcontract/programs/prediction/src/instructions/: betting.rs  deposite_liquidity.rs  get_oracle_res.rs  mod.rs  resolve_market.rs
Futurus-NEXTJS/blockchain/prediction-market-smartcontract/programs/prediction/src/states/: market.rs  user_position.rs
PREVEJO/: PLAN.md  PROJETO.md
(+1081 files in other folders)
