[workspace]
resolver = "2"
members = [
    "programs/*"
]

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
switchboard-solana = "0.30.4"
switchboard-on-demand = "0.11.3"
rust_decimal = "1.37.1"
blake3 = "=1.5.5"
borsh = "=1.5.1"
getrandom = "=0.2.15"
jobserver = "0.1.32"
cc = { version = "1.0", features = ["jobserver"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
