[package]
name = "prediction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
switchboard-solana = { workspace = true }
switchboard-on-demand = { workspace = true }
rust_decimal = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
